Fix image overflow on comments
If a comment had an image and the width of that image was greater then the comment's box, the image was overflowing the comment's box.

https://github.com/pressware/mayer/issues/13

--- a/css/sass/comments.scss
+++ b/css/sass/comments.scss
@@ -113,6 +113,13 @@
 
 				}
 
+				img {
+
+					height: auto;
+					max-width: 100%;
+					
+				}
+
 
 			}
 
